--- a/public/uses/index.html
+++ b/public/uses/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="/css/styles.css">
 
 
-      <script src="/js/main.js"></script>
+      <script src="js/main.js"></script>
 
 
 </head>
@@ -15,7 +15,7 @@
   <header>
     <div class="container mx-auto flex justify-between m-4">
   <div class="flex">
-    <img src="/img/email.png" alt="Logo" class="w-8 h-8 mr-2">
+    <img src="img/email.png" alt="Logo" class="w-8 h-8 mr-2">
     <h1 class="inline text-lg underline font-medium leading-normal">
       <a href="mailto:mail@mhmasum.com">mail@mhmasum.com</a>
     </h1>
@@ -44,10 +44,10 @@
 
   <div class="col-span-2 hidden items-center justify-end gap-4 md:flex">
   <a class="" rel="me" href="https://www.linkedin.com/in/mhmasum0" data-astro-prefetch="" target="_blank">
-    <img src="/img/linkedin.svg" alt="LinkedIn" class="w-8 h-8">
+    <img src="img/linkedin.svg" alt="LinkedIn" class="w-8 h-8">
   </a>
   <a rel="me" href="https://github.com/mhmasum0" data-astro-prefetch="" target="_blank">
-    <img src="/img/github.svg" alt="GitHub" class="w-8 h-8">
+    <img src="img/github.svg" alt="GitHub" class="w-8 h-8">
   </a>
 </div>
 
