--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
           Experienced QA Automation Engineer excelling in Appium and Playwright for robust testing, I also bring seasoned security insights through Burp Suite and ZAP. My CI/CD mastery guarantees efficient testing and secure, reliable software releases.
         </p>
   </div>
-  <img src="/img/portfolio-image.jpg" alt="Mahmudul Hasan Masum Portfolio" class="rounded-lg mx-auto mb-3 basis-1/4">
+  <img src="./img/portfolio-image.jpg" alt="Mahmudul Hasan Masum Portfolio" class="rounded-lg mx-auto mb-3 basis-1/4">
 </section>
 
   <section class="projects">
