--- a/public/uses/index.html
+++ b/public/uses/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 <title>Uses | Mahmudul Hasan</title>
-<link rel="stylesheet" href="./css/styles.css">
+<link rel="stylesheet" href="/css/styles.css">
 
 
       <script src="/js/main.js"></script>
